--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "ava",
-    "docs": "./node_modules/.bin/metalsmith"
+    "docs": "./node_modules/.bin/metalsmith && ./node_modules/.bin/postcss -c ./docs/layout/postcss/postcss.json"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,9 @@
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
     "nyc": "^5.0.1",
-    "postcss-cli": "^2.3.2"
+    "postcss-cli": "^2.3.2",
+    "postcss-import": "^7.1.3",
+    "postcss-simple-vars": "^1.2.0"
   },
   "dependencies": {
     "jquery": "^2.1.4"
