--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "ava",
-    "docs": "./node_modules/.bin/metalsmith && ./node_modules/.bin/postcss -c ./docs/layout/postcss/postcss.json"
+    "docs:clean": "rm -rf public",
+    "docs:pages": "./node_modules/.bin/metalsmith",
+    "docs:postcss": "./node_modules/.bin/postcss -c ./docs/layout/postcss/postcss.json",
+    "docs": "npm run docs:pages && npm run docs:postcss"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "http-server": "^0.8.5",
     "metalsmith": "^2.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
