--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "ava",
-    "docs:clean": "rm -rf public",
     "docs:pages": "./node_modules/.bin/metalsmith",
     "docs:postcss": "./node_modules/.bin/postcss -c ./docs/layout/postcss/postcss.json",
+    "docs:postcss-watch": "./node_modules/.bin/postcss -w -c ./docs/layout/postcss/postcss.json",
     "docs": "npm run docs:pages && npm run docs:postcss"
   },
   "repository": {
@@ -33,7 +33,9 @@
     "metalsmith-markdown": "^0.2.1",
     "nyc": "^5.0.1",
     "postcss-cli": "^2.3.2",
+    "postcss-color-function": "^2.0.0",
     "postcss-import": "^7.1.3",
+    "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0"
   },
   "dependencies": {
