--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nyc": "^5.0.1",
     "postcss-cli": "^2.3.2",
     "postcss-color-function": "^2.0.0",
+    "postcss-custom-media": "^5.0.0",
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0"
