--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "index.js",
   "scripts": {
-    "test": "ava test/unit/*spec.js --tap | tnyan",
+    "test": "babel-tape-runner test/unit/*spec.js | faucet",
     "docs:pages": "metalsmith",
     "docs:postcss": "postcss -c ./docs/layout/postcss/config.json",
     "docs:postcss-watch": "postcss -w -c ./docs/layout/postcss/config.json",
@@ -23,9 +23,10 @@
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
+    "babel-tape-runner": "^2.0.0",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
-    "jade": "^1.11.0",
+    "faucet": "0.0.1",
     "metalsmith": "^2.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
@@ -38,7 +39,7 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
     "tap-notify": "0.0.3",
-    "tap-nyan": "0.0.2"
+    "tape": "^4.3.0"
   },
   "dependencies": {
     "jquery": "^2.1.4"
