--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "index.js",
   "scripts": {
-    "test": "babel-tape-runner test/unit/*spec.js | faucet",
+    "test": "babel-tape-runner test/**/*.js | faucet",
+    "coverage": "babel-node node_modules/.bin/isparta cover test/**/*.js",
     "docs:pages": "metalsmith",
     "docs:postcss": "postcss -c ./docs/css/config.json",
     "docs:postcss-watch": "postcss -w -c ./docs/css/config.json",
@@ -21,12 +22,15 @@
   },
   "homepage": "https://github.com/leroy-merlin-br/garden#readme",
   "devDependencies": {
+    "babel-cli": "^6.3.17",
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-tape-runner": "^2.0.0",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "faucet": "0.0.1",
+    "isparta": "^4.0.0",
+    "jsdom": "^7.2.2",
     "metalsmith": "^2.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
@@ -38,7 +42,6 @@
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
-    "tap-notify": "0.0.3",
     "tape": "^4.3.0"
   },
   "dependencies": {
