--- a/package.json
+++ b/package.json
@@ -22,15 +22,7 @@
   },
   "homepage": "https://github.com/leroy-merlin-br/garden#readme",
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-tape-runner": "^2.0.0",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "faucet": "0.0.1",
-    "isparta": "^4.0.0",
-    "jsdom": "^7.2.2",
+    "karma": "^0.13.16",
     "metalsmith": "^2.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
@@ -42,7 +34,6 @@
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
-    "tape": "^4.3.0"
   },
   "dependencies": {
     "jquery": "^2.1.4"
