--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "index.js",
   "scripts": {
-    "test": "babel-tape-runner test/**/*.js | faucet",
-    "coverage": "babel-node node_modules/.bin/isparta cover test/**/*.js",
+    "test": "karma start --single-run --reporters dots",
+    "test:watch": "karma start",
     "docs:pages": "metalsmith",
     "docs:postcss": "postcss -c ./docs/css/config.json",
     "docs:postcss-watch": "postcss -w -c ./docs/css/config.json",
@@ -22,18 +22,35 @@
   },
   "homepage": "https://github.com/leroy-merlin-br/garden#readme",
   "devDependencies": {
+    "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "chai": "^3.4.1",
+    "isparta": "^4.0.0",
+    "istanbul": "gotwarlost/istanbul.git#source-map",
     "karma": "^0.13.16",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-coverage": "douglasduteil/karma-coverage#next",
+    "karma-mocha": "^0.2.1",
+    "karma-notify-reporter": "^0.1.1",
+    "karma-nyan-reporter": "^0.2.3",
+    "karma-phantomjs-launcher": "^0.2.2",
+    "karma-sinon": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.6",
     "metalsmith": "^2.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
+    "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
     "postcss-cli": "^2.3.2",
     "postcss-color-function": "^2.0.0",
     "postcss-custom-media": "^5.0.0",
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
+    "sinon": "^1.17.2"
   },
   "dependencies": {
     "jquery": "^2.1.4"
