--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
+    "cssnano": "^3.4.0",
     "gulp": "^3.9.0",
+    "gulp-postcss": "^6.0.1",
+    "gulp-rename": "^1.2.2",
     "isparta": "^4.0.0",
     "istanbul": "gotwarlost/istanbul.git#source-map",
     "karma": "^0.13.16",
@@ -51,6 +54,7 @@
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
+    "run-sequence": "^1.1.5",
     "sinon": "^1.17.2"
   },
   "dependencies": {
