feat(gulp): add server task

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "chai": "^3.4.1",
     "cssnano": "^3.4.0",
     "gulp": "^3.9.0",
+    "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-webserver": "^0.9.1",
     "isparta": "^4.0.0",
     "istanbul": "gotwarlost/istanbul.git#source-map",
     "karma": "^0.13.16",
