--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "karma-phantomjs-launcher": "^0.2.2",
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.6",
+    "lost": "^6.6.2",
     "metalsmith": "^2.1.0",
+    "metalsmith-collections": "^0.7.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
     "metalsmith-layouts": "^1.4.2",
@@ -53,6 +55,7 @@
     "postcss-cli": "^2.3.2",
     "postcss-color-function": "^2.0.0",
     "postcss-custom-media": "^5.0.0",
+    "postcss-extend": "^1.0.1",
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
