--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.6",
     "lost": "^6.6.2",
+    "marked": "^0.3.5",
     "metalsmith": "^2.1.0",
+    "metalsmith-code-highlight": "0.0.3",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
@@ -59,6 +61,7 @@
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
+    "prismjs": "^1.3.0",
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.2"
   },
