--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "postcss-extend": "^1.0.1",
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
+    "postcss-reporter": "^1.3.0",
     "postcss-simple-vars": "^1.2.0",
     "prismjs": "^1.3.0",
     "run-sequence": "^1.1.5",
-    "sinon": "^1.17.2"
+    "sinon": "^1.17.2",
+    "stylelint": "^3.1.4"
   },
   "dependencies": {
     "jquery": "^2.1.4"
