--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-webserver": "^0.9.1",
     "isparta": "^4.0.0",
     "istanbul": "gotwarlost/istanbul.git#source-map",
