fix(typo): change text-transform styles to transform only

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,8 @@
 {
+  "ignoreFiles": [
+    'node_modules/normalize.css/normalize.css',
+    'docs/css/vendor/**/*.css'
+  ],
   "rules": {
     "string-quotes": "double",
     "color-hex-case": "lower",
@@ -16,7 +20,6 @@
     "value-list-comma-newline-before": "never-multi-line",
     "value-list-comma-space-after": "always",
     "value-list-comma-space-before": "never",
-    "unit-blacklist": ["px"],
     "declaration-no-important": true,
     "declaration-colon-space-after": "always",
     "declaration-colon-space-before": "never",
@@ -24,26 +27,16 @@
     "declaration-block-semicolon-newline-after": "always",
     "declaration-block-semicolon-newline-before": "never-multi-line",
     "declaration-block-single-line-max-declarations": 1,
-    "block-closing-brace-newline-after": "always",
-    "block-closing-brace-newline-before": "always",
-    "block-closing-brace-space-after": "never",
-    "block-closing-brace-space-before": "never",
     "block-no-empty": true,
     "block-opening-brace-newline-after": "always",
-    "block-opening-brace-space-after": "never",
-    "block-opening-brace-space-before": "always",
     "selector-combinator-space-after": "always",
     "selector-combinator-space-before": "always",
     "selector-no-id": true,
     "selector-no-vendor-prefix": true,
     "selector-pseudo-element-colon-notation": "double",
-    "selector-list-comma-newline-after": "always",
-    "selector-list-comma-space-after": "never",
-    "selector-list-comma-space-before": "never",
     "rule-nested-empty-line-before": "always",
     "rule-no-duplicate-properties": true,
     "rule-no-shorthand-property-overrides": true,
-    "rule-non-nested-empty-line-before": "always",
     "rule-properties-order": "alphabetical",
     "rule-trailing-semicolon": "always",
     "media-feature-colon-space-after": "always",
