--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
+    "chalk": "^1.1.1",
     "cssnano": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.4",
