--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "phantomjs": "^1.9.19",
     "postcss-cli": "^2.3.2",
     "postcss-color-function": "^2.0.0",
+    "postcss-conditionals": "^2.0.0",
     "postcss-custom-media": "^5.0.0",
+    "postcss-each": "^0.7.1",
     "postcss-extend": "^1.0.1",
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
