--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/leroy-merlin-br/garden#readme",
   "devDependencies": {
+    "babel-eslint": "^4.1.6",
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chalk": "^1.1.1",
     "cssnano": "^3.4.0",
     "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
