--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-stylelint": "0.0.4",
+    "gulp-stylelint-console-reporter": "0.0.2",
     "gulp-webserver": "^0.9.1",
     "isparta": "^4.0.0",
     "istanbul": "gotwarlost/istanbul.git#source-map",
