--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,12 @@
   },
   "env": {
     "es6": true,
-    "browser": true
+    "browser": true,
+    "mocha": true,
+  },
+  "globals": {
+    "expect": true,
+    "sinon": true
   },
   "extends": "eslint:recommended"
 }
