--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start --single-run --reporters dots",
-    "test:watch": "karma start",
-    "docs:pages": "metalsmith",
-    "docs:postcss": "postcss -c ./docs/css/config.json",
-    "docs:postcss-watch": "postcss -w -c ./docs/css/config.json",
-    "docs": "npm run docs:pages && npm run docs:postcss"
+    "test:watch": "karma start"
   },
   "repository": {
     "type": "git",
@@ -23,9 +19,13 @@
   "homepage": "https://github.com/leroy-merlin-br/garden#readme",
   "devDependencies": {
     "autoprefixer": "^6.2.3",
+    "babel-cli": "^6.4.0",
     "babel-eslint": "^4.1.6",
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "browserify-istanbul": "^0.2.1",
     "chai": "^3.4.1",
     "chalk": "^1.1.1",
     "cssnano": "^3.4.0",
@@ -39,12 +39,12 @@
     "gulp-stylelint": "0.0.4",
     "gulp-stylelint-console-reporter": "0.0.2",
     "gulp-webserver": "^0.9.1",
-    "isparta": "^4.0.0",
-    "istanbul": "gotwarlost/istanbul.git#source-map",
+    "istanbul": "^1.0.0-alpha.2",
     "karma": "^0.13.16",
     "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^4.4.2",
     "karma-chai": "^0.1.0",
-    "karma-coverage": "douglasduteil/karma-coverage#next",
+    "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
     "karma-notify-reporter": "^0.1.1",
     "karma-nyan-reporter": "^0.2.3",
