--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
   "env": {
     "es6": true,
     "browser": true,
-    "mocha": true,
+    "node": true,
+    "mocha": true
   },
   "globals": {
     "expect": true,
