--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "index.js",
   "scripts": {
-    "test": "karma start --single-run --reporters dots",
+    "test": "karma start --single-run && eslint src/**/*.js test/**/*.spec.js",
     "test:watch": "karma start"
   },
   "repository": {
@@ -29,6 +29,7 @@
     "chai": "^3.4.1",
     "chalk": "^1.1.1",
     "cssnano": "^3.4.0",
+    "eslint": "^1.10.3",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
     "gulp-gh-pages": "^0.5.4",
