--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-iconfont": "^5.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
@@ -72,6 +73,7 @@
     "postcss-custom-media": "^5.0.0",
     "postcss-each": "^0.7.1",
     "postcss-extend": "^1.0.1",
+    "postcss-font-magician": "^1.4.0",
     "postcss-import": "^7.1.3",
     "postcss-nested": "^1.0.0",
     "postcss-reporter": "^1.3.0",
