feat(form-molecule): add field active class js/tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,10 @@
   },
   "globals": {
     "expect": true,
-    "sinon": true
+    "sinon": true,
+    "jQuery": true,
+    "$": true,
+    "fixture": true
   },
   "extends": "eslint:recommended"
 }
