--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
     "karma-coveralls": "^1.1.2",
+    "karma-fixture": "^0.2.5",
+    "karma-html2js-preprocessor": "^0.1.0",
     "karma-mocha": "^0.2.1",
     "karma-notify-reporter": "^0.1.1",
     "karma-nyan-reporter": "^0.2.3",
-    "karma-phantomjs-launcher": "^0.2.2",
+    "karma-phantomjs2-launcher": "^0.4.0",
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.6",
     "lost": "^6.6.2",
