--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "postcss-extend": "^1.0.1",
     "postcss-font-magician": "^1.4.0",
     "postcss-import": "^7.1.3",
+    "postcss-mixins": "^3.0.2",
     "postcss-nested": "^1.0.0",
     "postcss-reporter": "^1.3.0",
     "postcss-simple-vars": "^1.2.0",
