--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "garden",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A styleguide based on Leroy Merlin needs",
-  "main": "index.js",
+  "main": "dist/js/garden.min.js",
   "scripts": {
     "test": "karma start --single-run --reporters dots,coverage,coveralls",
     "test:watch": "karma start",
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/leroy-merlin-br/garden/issues"
   },
-  "homepage": "https://github.com/leroy-merlin-br/garden#readme",
+  "homepage": "http://styleguide.leroymerlin.com.br",
   "devDependencies": {
     "autoprefixer": "^6.2.3",
     "babel-cli": "^6.4.0",
@@ -46,6 +46,7 @@
     "gulp-stylelint-console-reporter": "0.0.2",
     "gulp-webserver": "^0.9.1",
     "isparta": "^4.0.0",
+    "jquery": "^2.1.4",
     "karma": "^0.13.16",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^4.4.2",
@@ -87,8 +88,5 @@
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.2",
     "stylelint": "^3.2.1"
-  },
-  "dependencies": {
-    "jquery": "^2.1.4"
   }
 }
