--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "garden",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "dist/js/garden.min.js",
   "scripts": {
@@ -20,6 +20,9 @@
     "url": "https://github.com/leroy-merlin-br/garden/issues"
   },
   "homepage": "http://styleguide.leroymerlin.com.br",
+  "dependencies": {
+    "normalize.css": "^3.0.3"
+  },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
     "babel-cli": "^6.4.0",
@@ -70,7 +73,6 @@
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
     "mocha": "^2.3.4",
-    "normalize.css": "^3.0.3",
     "phantomjs": "^1.9.19",
     "postcss-cli": "^2.3.2",
     "postcss-color-function": "^2.0.0",
