--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "dist/js/garden.min.js",
   "scripts": {
-    "test": "karma start --single-run --reporters dots,coverage,coveralls",
-    "test:watch": "karma start",
+    "test": "karma start",
+    "test:ci": "karma start --single-run --reporters dots,coverage,coveralls",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint src/**/*.js test/**/*.spec.js",
     "lint:css": "stylelint 'src/**/*.css' 'docs/**/*.css'"
@@ -27,17 +27,15 @@
     "autoprefixer": "^6.2.3",
     "babel-cli": "^6.4.0",
     "babel-eslint": "^4.1.6",
+    "babel-istanbul-loader": "0.0.3",
+    "babel-loader": "^6.2.2",
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "browserify-istanbul": "^0.2.1",
     "chai": "^3.4.1",
     "chalk": "^1.1.1",
     "cssnano": "^3.4.0",
     "eslint": "^1.10.3",
     "gulp": "^3.9.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-eslint": "^1.1.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-iconfont": "^5.0.1",
@@ -47,12 +45,11 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylelint": "0.0.4",
     "gulp-stylelint-console-reporter": "0.0.2",
+    "gulp-uglify": "^1.5.2",
     "gulp-webserver": "^0.9.1",
-    "isparta": "^4.0.0",
     "jquery": "^2.1.4",
     "karma": "^0.13.16",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-browserify": "^4.4.2",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
     "karma-coveralls": "^1.1.2",
@@ -64,6 +61,7 @@
     "karma-phantomjs2-launcher": "^0.4.0",
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
     "lost": "^6.6.2",
     "marked": "^0.3.5",
     "metalsmith": "^2.1.0",
@@ -74,7 +72,6 @@
     "metalsmith-markdown": "^0.2.1",
     "mocha": "^2.3.4",
     "phantomjs": "^1.9.19",
-    "postcss-cli": "^2.3.2",
     "postcss-color-function": "^2.0.0",
     "postcss-conditionals": "^2.0.0",
     "postcss-custom-media": "^5.0.0",
@@ -89,6 +86,7 @@
     "prismjs": "^1.3.0",
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.2",
-    "stylelint": "^3.2.1"
+    "stylelint": "^3.2.1",
+    "webpack-stream": "^3.1.0"
   }
 }
