lint(unity): add px in blacklist

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -47,6 +47,7 @@
     "indentation": 2,
     "max-empty-lines": 2,
     "no-eol-whitespace": true,
-    "no-missing-eof-newline": true
+    "no-missing-eof-newline": true,
+    "unit-blacklist": "px"
   }
 }
