--- a/.stylelintrc
+++ b/.stylelintrc
@@ -48,6 +48,13 @@
     "max-empty-lines": 2,
     "no-eol-whitespace": true,
     "no-missing-eof-newline": true,
-    "unit-blacklist": "px"
+    "property-unit-whitelist": {
+      "/^margin/": ["rem", "px", "%"],
+      "/^padding/": ["rem", "px", "%"],
+      "/^border/": ["rem", "px"],
+      "/^font/": ["rem"],
+      "width": ["rem", "px", "%"],
+      "height": ["rem", "px", "%"],
+    }
   }
 }
