--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "postcss-each": "^0.7.1",
     "postcss-extend": "^1.0.1",
     "postcss-font-magician": "^1.4.0",
+    "postcss-for": "^2.0.1",
     "postcss-import": "^7.1.3",
     "postcss-mixins": "^3.0.2",
     "postcss-nested": "^1.0.0",
