--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,5 @@
 {
-  "ignoreFiles": "src/css/atoms/glyph.css",
+  "ignoreFiles": ['./src/css/atoms/glyph.css'],
   "rules": {
     "string-quotes": "double",
     "color-hex-case": "lower",
@@ -20,7 +20,7 @@
     "declaration-no-important": true,
     "declaration-colon-space-after": "always",
     "declaration-colon-space-before": "never",
-    "declaration-block-no-single-line": true,
+    "block-no-single-line": true,
     "declaration-block-semicolon-newline-after": "always",
     "declaration-block-semicolon-newline-before": "never-multi-line",
     "declaration-block-single-line-max-declarations": 1,
@@ -32,10 +32,10 @@
     "selector-no-vendor-prefix": true,
     "selector-pseudo-element-colon-notation": "double",
     "rule-nested-empty-line-before": "always",
-    "rule-no-duplicate-properties": true,
-    "rule-no-shorthand-property-overrides": true,
-    "rule-properties-order": "alphabetical",
-    "rule-trailing-semicolon": "always",
+    "declaration-block-no-duplicate-properties": true,
+    "declaration-block-no-shorthand-property-overrides": true,
+    "declaration-block-properties-order": "alphabetical",
+    "declaration-block-trailing-semicolon": "always",
     "media-feature-colon-space-after": "always",
     "media-feature-colon-space-before": "never",
     "media-feature-range-operator-space-after": "always",
@@ -47,14 +47,6 @@
     "indentation": 2,
     "max-empty-lines": 2,
     "no-eol-whitespace": true,
-    "no-missing-eof-newline": true,
-    "property-unit-whitelist": {
-      "/^margin/": ["rem", "px", "%"],
-      "/^padding/": ["rem", "px", "%"],
-      "/^border/": ["rem", "px"],
-      "/^font/": ["rem"],
-      "width": ["rem", "px", "%"],
-      "height": ["rem", "px", "%"],
-    }
+    "no-missing-eof-newline": true
   }
 }
