--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/js/garden.min.js",
   "scripts": {
     "test": "karma start",
-    "test:ci": "karma start --single-run --reporters dots,coverage,coveralls"
+    "test:ci": "karma start --single-run --reporters dots,coverage -R spec",
+    "report-coverage": "codecov"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chalk": "^1.1.1",
+    "codecov": "^1.0.1",
     "cssnano": "^3.4.0",
     "eslint": "^1.10.3",
     "gulp": "^3.9.0",
@@ -50,7 +52,6 @@
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
-    "karma-coveralls": "^1.1.2",
     "karma-fixture": "^0.2.5",
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-mocha": "^0.2.1",
