feat(phantomjs): update phantomjs-laucher to use the default one

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "gulp-uglify": "^1.5.2",
     "gulp-webserver": "^0.9.1",
     "jquery": "^2.1.4",
-    "karma": "^0.13.16",
+    "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
@@ -57,7 +57,7 @@
     "karma-mocha": "^0.2.1",
     "karma-notify-reporter": "^0.1.1",
     "karma-nyan-reporter": "^0.2.3",
-    "karma-phantomjs2-launcher": "^0.4.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
@@ -71,6 +71,7 @@
     "metalsmith-relative": "^1.0.3",
     "mocha": "^2.3.4",
     "phantomjs": "^1.9.19",
+    "phantomjs-prebuilt": "^2.1.7",
     "postcss-calc": "^5.2.0",
     "postcss-color-function": "^2.0.0",
     "postcss-conditionals": "^2.0.0",
