--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-uglify": "^1.5.2",
     "gulp-webserver": "^0.9.1",
     "jquery": "^2.1.4",
+    "jump.js": "^0.4.0",
     "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
