--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,12 +6,11 @@
     "color-hex-length": "long",
     "color-no-hex": true,
     "number-leading-zero": "never",
-    "number-zero-length-no-unit": true,
+    "length-zero-no-unit": true,
     "number-no-trailing-zeros": true,
     "function-calc-no-unspaced-operator": true,
     "function-comma-space-after": "always",
     "function-parentheses-newline-inside": "never-multi-line",
-    "function-url-quotes": "double",
     "value-no-vendor-prefix": true,
     "value-list-comma-newline-after": "never-multi-line",
     "value-list-comma-newline-before": "never-multi-line",
