--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "dist/js/garden.min.js",
   "scripts": {
+    "gulp": "gulp",
     "test": "karma start",
     "test:ci": "karma start --single-run --reporters dots,coverage -R spec",
     "report-coverage": "codecov"
@@ -19,13 +20,13 @@
   },
   "homepage": "http://styleguide.leroymerlin.com.br",
   "dependencies": {
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
     "babel-cli": "^6.4.0",
-    "babel-eslint": "^4.1.6",
-    "babel-istanbul-loader": "0.0.3",
+    "babel-eslint": "^6.1.2",
+    "babel-istanbul-loader": "0.1.0",
     "babel-loader": "^6.2.2",
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
@@ -33,29 +34,35 @@
     "chalk": "^1.1.1",
     "codecov": "^1.0.1",
     "cssnano": "^3.4.0",
-    "eslint": "^1.10.3",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^1.1.1",
+    "del": "^2.2.1",
+    "eslint": "^3.0.1",
+    "eslint-config-standard": "^5.2.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-iconfont": "^5.0.1",
+    "gulp-iconfont": "^8.0.1",
     "gulp-if": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-stylelint-console-reporter": "0.0.2",
+    "gulp-stylelint-console-reporter": "0.1.1",
     "gulp-uglify": "^1.5.2",
     "gulp-webserver": "^0.9.1",
-    "jquery": "^2.1.4",
-    "karma": "^0.13.22",
+    "jquery": "^3.1.0",
+    "jump.js": "^0.4.0",
+    "karma": "^1.1.1",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
-    "karma-coverage": "^0.5.3",
+    "karma-coverage": "^1.1.0",
     "karma-fixture": "^0.2.5",
-    "karma-html2js-preprocessor": "^0.1.0",
-    "karma-mocha": "^0.2.1",
-    "karma-notify-reporter": "^0.1.1",
+    "karma-html2js-preprocessor": "^1.0.0",
+    "karma-mocha": "^1.1.1",
+    "karma-notify-reporter": "^1.0.1",
     "karma-nyan-reporter": "^0.2.3",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon": "^1.0.4",
@@ -70,24 +77,23 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-relative": "^1.0.3",
     "mocha": "^2.3.4",
-    "phantomjs": "^1.9.19",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-calc": "^5.2.0",
     "postcss-color-function": "^2.0.0",
     "postcss-conditionals": "^2.0.0",
     "postcss-custom-media": "^5.0.0",
-    "postcss-each": "^0.7.1",
+    "postcss-each": "^0.9.3",
     "postcss-font-magician": "^1.4.0",
     "postcss-for": "^2.0.1",
-    "postcss-import": "^7.1.3",
-    "postcss-mixins": "^3.0.2",
+    "postcss-import": "^8.1.2",
+    "postcss-mixins": "^5.0.0",
     "postcss-nested": "^1.0.0",
     "postcss-reporter": "^1.3.0",
-    "postcss-simple-vars": "^1.2.0",
+    "postcss-simple-vars": "^3.0.0",
     "prismjs": "^1.3.0",
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.2",
-    "stylelint": "^5.1.0",
+    "stylelint": "^6.9.0",
     "webpack-stream": "^3.1.0",
     "yargs": "^4.1.0"
   }
