--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "http://styleguide.leroymerlin.com.br",
   "dependencies": {
-    "normalize.css": "^4.2.0"
+    "normalize.css": "^4.2.0",
+    "jump.js": "^0.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
@@ -54,7 +55,6 @@
     "gulp-uglify": "^1.5.2",
     "gulp-webserver": "^0.9.1",
     "jquery": "^3.1.0",
-    "jump.js": "^0.4.0",
     "karma": "^1.1.1",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
