feat(tooltip): add tooltip component
feat(tooltip): add brief description for tooltip component

feat(tooltip): add additional documentation for tooltip

feat(tooltip): add specs for tooltip component

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "homepage": "http://styleguide.leroymerlin.com.br",
   "dependencies": {
+    "jump.js": "^0.4.0",
     "normalize.css": "^4.2.0",
-    "jump.js": "^0.4.0"
+    "popper.js": "^0.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
