--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "dist/js/garden.min.js",
   "scripts": {
+    "start": "gulp",
     "gulp": "gulp",
     "test": "karma start",
     "test:ci": "karma start --single-run --reporters dots,coverage -R spec",
