--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "prismjs": "^1.3.0",
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.2",
-    "stylelint": "^7.0.3",
+    "stylelint": "^7.9.0",
+    "stylelint-order": "^0.3.0",
     "webpack-stream": "^3.1.0",
     "yargs": "^4.1.0"
   }
