--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "del": "^2.2.1",
     "eslint": "^3.0.1",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -72,7 +74,7 @@
     "karma-webpack": "^2.0.3",
     "marked": "^0.3.5",
     "metalsmith": "^2.1.0",
-    "metalsmith-collections": "^0.9.0",
+    "metalsmith-collections": "^0.7.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-jade": "^2.0.2",
     "metalsmith-layouts": "^1.4.2",
@@ -94,10 +96,16 @@
     "postcss-simple-vars": "^3.0.0",
     "prismjs": "^1.3.0",
     "run-sequence": "^1.1.5",
-    "sinon": "^2.1.0",
+    "sinon": "^1.17.2",
     "stylelint": "^7.9.0",
     "stylelint-order": "^0.4.3",
     "webpack-stream": "^3.1.0",
     "yargs": "^7.1.0"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "metalsmith-collections",
+      "sinon"
+    ]
   }
 }
