chore(gitignore): add dist folder to .gitignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,6 @@
-**/.*
-**/*.md
-node_modules
-test
-coverage
-docs
-public
-gulp
-gulpfile.babel.js
-metalsmith.js
-karma.conf.js
-bower.json
-webpack.config.js
+*
+!src
+!dist
+*.log
+*.swp
+**/.DS_Store
