Revert "chore(gitignore): add dist folder to .gitignore"
This reverts commit b86a129beb0092c495ac27f79939775efa88df1a.

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,13 @@
-*
-!src
-!dist
-*.log
-*.swp
-**/.DS_Store
+**/.*
+**/*.md
+node_modules
+test
+coverage
+docs
+public
+gulp
+gulpfile.babel.js
+metalsmith.js
+karma.conf.js
+bower.json
+webpack.config.js
