chore(lint): Add chai friendly eslint plugin
Due to the ESLint update, we're getting "no-unused-expressions" when writing
Chai expectations. The [eslint-plugin-chai-friendly](https://github.com/ihordiachenko/eslint-plugin-chai-friendly)
overrides the original rule to make it work.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "rules": {
-    "no-unused-vars": 0
+    "no-unused-vars": 0,
+    "no-unused-expressions": 0,
+    "chai-friendly/no-unused-expressions": 2
   },
   "extends": "standard",
   "env": {
@@ -11,5 +13,8 @@
     "fixture": true,
     "sinon": true,
     "history": true
-  }
+  },
+  "plugins": [
+    "chai-friendly"
+  ]
 }
