--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "http://styleguide.leroymerlin.com.br",
   "dependencies": {
     "jump.js": "^1.0.2",
-    "normalize.css": "^6.0.0",
+    "normalize.css": "^4.2.0",
     "popper.js": "^1.9.1"
   },
   "devDependencies": {
@@ -106,7 +106,8 @@
   },
   "greenkeeper": {
     "ignore": [
-      "metalsmith-collections"
+      "metalsmith-collections",
+      "normalize.css"
     ]
   }
 }
