--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "^6.3.13",
     "chai": "^4.1.0",
     "chalk": "^2.0.1",
+    "classlist.js": "^1.1.20150312",
     "codecov": "^2.1.0",
     "cssnano": "^3.4.0",
     "del": "^3.0.0",
