--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "sinon-test": "^2.1.1",
     "stylelint": "~8.2.0",
     "stylelint-order": "^0.7.0",
+    "webpack": "^3.6.0",
     "webpack-stream": "^4.0.0",
     "yargs": "^9.0.1"
   },
