--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "codecov": "^2.1.0",
     "cssnano": "^3.4.0",
     "del": "^3.0.0",
+    "element-closest": "^2.0.2",
     "eslint": "^4.0.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-chai-friendly": "^0.4.0",
