--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-env": "^1.6.1",
     "chai": "^4.1.0",
     "chalk": "^2.0.1",
     "classlist.js": "^1.1.20150312",
