--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-  "presets": ["es2015"],
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "ie >= 10"]
+      }
+    }]
+  ],
   "plugins": ["transform-object-rest-spread"]
 }
