--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-relative": "^1.0.3",
     "mocha": "^4.0.0",
+    "phantomjs-polyfill-array-from": "^1.0.1",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-calc": "^6.0.0",
     "postcss-color-function": "^4.0.0",
