--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "garden",
-  "version": "0.45.6",
+  "version": "0.46.0",
   "description": "A styleguide based on Leroy Merlin needs",
   "main": "dist/js/garden.min.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/leroy-merlin-br/garden.git"
   },
-  "author": "Fernando Fleury",
+  "author": "Leroy Merlin Brasil",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/leroy-merlin-br/garden/issues"
