chore(metalsmith-layouts): add metalsmith-layouts to greenkeeper ignore list

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
   "greenkeeper": {
     "ignore": [
       "metalsmith-collections",
+      "metalsmith-layouts",
       "normalize.css"
     ]
   }
