--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "http://styleguide.leroymerlin.com.br",
   "dependencies": {
+    "flexboxgrid": "^6.3.1",
     "jump.js": "^1.0.2",
     "normalize.css": "^4.2.0",
     "popper.js": "^1.9.1"
