chore(package.json): update André email

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
       "url": "https://github.com/leandrogrillo"
     },
     {
-      "name": "Andre Carneiro",
-      "email": "acarneiro@leroymerlin.com.br",
+      "name": "André Carneiro",
+      "email": "andreolvr0@gmail.com",
       "url": "https://github.com/andreolvr"
     },
     {
